# arxiv-bot

./: .gitignore  README.md  arxiv_bot.py  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  implementation_plan.md  runbook.md  task_board.md  usage_examples.md
scripts/: arxiv_bot_entry.py  install_with_pip.sh  run_literature_survey.py  run_pipeline.py
src/arxiv_bot/: __init__.py  cli_entry.py  contracts.py  models.py  orchestrator.py
src/arxiv_bot/pipeline/: errors.py  retry.py
src/arxiv_bot/skills/: __init__.py  discovery.py  existence_verification.py  export.py  inspire_client.py  literature_regenerate.py  literature_synthesis.py  llm_client.py  metadata_bibtex.py  paper_summary.py  pdf_download.py  qa_audit.py  run_manifest.py  seed_ingest.py  stubs.py
src/arxiv_bot/storage/: __init__.py  sqlite_store.py
tests/e2e/: test_fixture_regression.py  test_mvp_contract.py
tests/fixtures/corpus/: transformers_minimal.json
tests/fixtures/snapshots/transformers_minimal/: literature_review.tex  paper_summaries.tex  references.bib
tests/integration/: test_scaffold_pipeline.py
tests/unit/: test_cli_entry.py  test_contracts.py  test_discovery_skill.py  test_existence_verification_skill.py  test_export_skill.py  test_inspire_client.py  test_literature_regenerate.py  test_literature_synthesis_skill.py  test_metadata_bibtex_skill.py  test_orchestrator.py  test_paper_summary_skill.py  test_pdf_download_skill.py  test_qa_audit_skill.py  test_retry.py  test_run_manifest.py  test_seed_ingest_skill.py  test_sqlite_store.py
